Flickering fix

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ html, body {
 
 
 
-	.main { animation: appear 0.8s; 
+	.container-grid, .longread, footer { animation: appear 0.8s; 
 		position: relative;
 	}
 
